--- a/index.html.html
+++ b/index.html.html
@@ -1,4 +1,4 @@
-<meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es-MX">
 <head>
     <meta charset="UTF-8">
@@ -129,46 +129,42 @@
     </style>
 </head>
 <body>
-    <!-- Encabezado -->
     <header>
-        <img src="https://i.imgur.com/7ZkX7yY.png" alt="Camila la Yorkie - Mascota Oficial" class="camis-logo">
+        <img src="https://raw.githubusercontent.com/camispos123-maker/camispos123.github.io/main/1770118033297.png" alt="Camila la Yorkie - Mascota Oficial" class="camis-logo">
         <h1>Servicios y Soluciones Camispos</h1>
         <p>Soluciones Integrales para tu Negocio 🐾</p>
     </header>
 
-    <!-- Navegación -->
     <nav>
         <a href="#sobre">Sobre Nosotros</a>
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contacto</a>
     </nav>
 
-    <!-- Sección: Sobre Nosotros -->
     <div class="section" id="sobre">
         <h2>Sobre Nosotros</h2>
-        <img src="https://i.imgur.com/5FkLbQH.png" alt="Camila junto a equipo POS" class="camis-photo">
+        <img src="https://raw.githubusercontent.com/camispos123-maker/camispos123.github.io/main/1770130532936.png" alt="Servicios Camispos - Equipo y Equipos" class="camis-photo">
         <p>Somos especialistas en la instalación y mantenimiento de sistemas POS, balanzas electrónicas y soluciones de facturación para negocios locales en México.</p>
-        <p>Nuestra mascota oficial es Camila, la Yorkie que revisa que cada servicio esté a la altura de tus expectativas.</p>
+        <p>Con cobertura en Nicolás Romero, Estado de México y zonas aledañas – nuestra mascota oficial es Camila, la Yorkie que revisa que cada servicio esté a la altura de tus expectativas.</p>
     </div>
 
-    <!-- Sección: Servicios -->
     <div class="section" id="servicios">
         <h2>Nuestros Servicios</h2>
-
+        
         <div class="service-card">
             <h3>📦 Instalación de Equipos POS</h3>
             <ul>
-                <li>SalesPlay, Chromis POS y más</li>
-                <li>Configuración personalizada por rubro</li>
-                <li>Pruebas y capacitación para tu equipo</li>
+                <li>SalesPlay, Chromis POS y más sistemas</li>
+                <li>Configuración personalizada por rubro (carnicerías, abarrotes, panaderías)</li>
+                <li>Conexión de periféricos (impresoras, escáneres)</li>
             </ul>
         </div>
 
         <div class="service-card">
             <h3>⚖️ Configuración de Balanzas</h3>
             <ul>
-                <li>Balanzas ACS-C, genéricas y más</li>
-                <li>Integración directa con tu POS</li>
+                <li>Balanzas ACS-C y genéricas</li>
+                <li>Integración directa con POS</li>
                 <li>Calibración y mantenimiento</li>
             </ul>
         </div>
@@ -178,22 +174,30 @@
             <ul>
                 <li>CFDI autorizado por el SAT</li>
                 <li>Integración con sistemas de venta</li>
-                <li>Gestión de comprobantes</li>
+                <li>Gestión de comprobantes y timbres</li>
+            </ul>
+        </div>
+
+        <div class="service-card">
+            <h3>🛠️ Mantenimiento y Soporte</h3>
+            <ul>
+                <li>Mantenimiento preventivo y correctivo</li>
+                <li>Soporte técnico presencial y online</li>
+                <li>Capacitación para tu equipo</li>
             </ul>
         </div>
     </div>
 
-    <!-- Sección: Contacto -->
     <div class="section" id="contacto">
         <h2>Contáctanos</h2>
         <div class="contact-info">
             <p>📱 WhatsApp: +52 5648516663</p>
-            <p>📍 NICOLAS ROMERO y zonas aledañas</p>
+            <p>📍 Nicolás Romero, Estado de México y alrededores</p>
             <a href="https://wa.me/525648516663" class="whatsapp-btn">Enviar Mensaje por WhatsApp</a>
         </div>
+        <img src="https://raw.githubusercontent.com/camispos123-maker/camispos123.github.io/main/1770156000989.png" alt="Diseño de Servicios Camispos" class="camis-photo">
     </div>
 
-    <!-- Pie de página -->
     <footer>
         <p>Servicios y Soluciones Camispos © 2026 | Aprobado por Camila la Yorkie 🐕</p>
     </footer>
